--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,3 +1,4 @@
+@media screen and (max-width: 992px){
 *{
   margin: 0%;
   padding: 0%;
@@ -194,4 +195,5 @@ label{
 } */
 #signup{
   left: 450px;
+}
 }
