--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,16 +10,16 @@
 <body>
     <main>
         <section id="section1">
-            <img src="../images/flatimore.svg" id='flatimore' alt="hello">
+            <img src="../images/flatimore.svg" id='fatmore' alt="hello">
             <div id="overlay"></div>
             <img id='bgimg' src="../images/bgimg.jpg" alt="">
         </section>
         <section id="section2">
-            <div id="titlebox">
+            <!-- <div id="titlebox">
                 <div id="logintitle">Login</div>
                 <div id="signuptitle">Signup</div>
-            </div>
-            <form action="" id="login">
+            </div> -->
+            <!-- <form action="" id="login">
                 <div id="name" class="inputs">
                     <input type="email" required id="nme">
                     <label for="" id="namelbl">Email</label>
@@ -31,8 +31,8 @@
                 </div>
                 <h5 id="frgtpass">Forgot Password</h5>
                 <button id="btnlogin">Login</button>
-            </form>
-            <form action="" id="signup">
+            </form> -->
+            <!-- <form action="" id="signup">
                 <div id="name" class="inputs">
                     <input type="text" required id="nme">
                     <label for="" id="namelbl">Name</label>
@@ -48,12 +48,12 @@
                 </div>
                 <h5 id="frgtpass">Forgot Password</h5>
                 <button id="btnlogin">Sign Up</button>
-            </form>
-            <div id="authentications">
+            </form> -->
+            <!-- <div id="authentications">
                 <img src="../images/google.png" alt="">
                 <img src="../images/fb.png" alt="">
                 <img src="../images/twitter.png" alt="">
-            </div>
+            </div> -->
         </section>
         <img src="../images/tomato.png" id='tomato' alt="">
     </main>
