--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -36,3 +36,9 @@ main{
   text-decoration: none;
   color: rgb(255, 239, 239);
 }
+main{
+  max-height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
