--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,4 +1,3 @@
-@media screen and (max-width: 992px){
 *{
   margin: 0%;
   padding: 0%;
@@ -8,43 +7,57 @@ html,body{
   height: 100%;
   width: 100%;
   font-family: 'poppins';
-  overflow: hidden;
 }
 main{
-  width: 100%;
   min-height: 100vh;
+  width: 100px;
+  overflow: hidden;
 }
 #section1{
-    height:450px;
-    width: 450px;
-    border-radius: 50%;
-    overflow: hidden;
-    position: absolute;
-    top: -40%;
-    left: -22%;
-}
-#bgimg{
-    height:450px;
-    width: 650px;
+  width: 30vmax;
+  height: 30vmax;
+  border-radius: 50%;
+  position: absolute;
+  overflow: hidden;
+  left: -6vmax;
+  top: -7vmax;
+  background-color: red;
 }
 #overlay{
   position: absolute;
-    height:450px;
-    width: 650px;
-    background: linear-gradient(to left bottom,#FF0000,#FC9696);
-    opacity: .8;
+  height:30vmax;
+  width: 30vmax;
+  background: linear-gradient(to left bottom,#FF0000,#FC9696);
+  opacity: .8;
 }
-#flatimore{
+#fatmore{
   position: absolute;
-  left: 55%;
-  top: 65%;
-  transform: translate(-50%,0);
-  /* background-color: red; */
+  left: 12vmax;
+  top: 13vmax;
   color: black;
-  height: 50px;
+  height: 4vmax;
   z-index: 9999;
 }
-#section2{
+#bgimg{
+  height: 30vmax;
+  width: 30vmax;
+}
+#tomato{
+  height: 15vmax;
+  position: absolute;
+  bottom: -3vmax;
+  right: -3.5vmax;
+}
+#signup{
+  display: none;
+}
+@media screen and (max-width:500px) {
+  main{
+    overflow: hidden;
+  }
+  
+}
+/* #section2{
   left: 15%;
   top: 18%;
   height: 424px;
@@ -65,8 +78,8 @@ main{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid rgb(189, 189, 189);
-  /* background-color: red; */
+  border: 1px solid rgb(189, 189, 189); */
+  /* background-color: red; 
   border-radius: 50px;
   overflow: hidden;
   font: 500 2vmax 'poppins';
@@ -86,7 +99,7 @@ main{
   place-items: center;
   height: 100%;
   width: 40%;
-  /* background-color: red; */
+  /* background-color: red; 
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   background-color: white;
@@ -102,7 +115,7 @@ form{
   top: 23%;
   height: 200px;
   padding: 0 20px;
-  /* background-color: red; */
+  /* background-color: red; 
 }
 .inputs{
   display: flex;
@@ -113,7 +126,7 @@ form{
   padding-right: 20px;
 }
 #password{
-  /* background-color: red; */
+  /* background-color: red; 
   width: 200px;
   position: relative;
   margin-top: 10px;
@@ -140,7 +153,7 @@ form{
   opacity: .6;
   margin-top: 28px;
   cursor: pointer;
-  /* background-color: #FC9696; */
+  /* background-color: #FC9696; 
 }
 #nme:focus~#namelbl,
 #nme:valid~#namelbl{
@@ -152,7 +165,7 @@ form{
 }
 #frgtpass{
   position: absolute;
-  /* background-color: red; */
+  /* background-color: red; 
   right: 2%;
   bottom: 43%;
   font-weight: 500;
@@ -180,7 +193,7 @@ form{
   position: absolute;
   bottom: 12%;
   left: 25%;
-  /* transform: translate(-50%,0); */
+  /* transform: translate(-50%,0); 
 }
 #authentications > img{
   height: 25px;
@@ -192,8 +205,7 @@ label{
 }
 /* #login{
   left: 50px;
-} */
+} 
 #signup{
   left: 450px;
-}
-}
+} */
