--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
         <section id="section1">
             <img src="../images/flatimore.svg" id='fatmore' alt="hello">
             <div id="overlay"></div>
-            <img id='bgimg' src="../images/bgimg.jpg" alt="">
+            <!-- <img id='bgimg' src="../images/bgimg.jpg" alt=""> -->
         </section>
         <section id="section2">
             <div id="titlebox">
